# RayTracer

./: CMakeLists.txt  README.md  raytracer
include/: Camera.hpp  Core.hpp  DLLoader.hpp  Error.hpp  RayTracer.hpp  Scene.hpp  Size.hpp
include/encoder/: IEncoder.hpp
include/lights/: ALight.hpp  ILight.hpp
include/material/: Color.hpp  Material.hpp
include/maths/: Point3D.hpp  Ray.hpp  Rectangle3D.hpp  Vector3D.hpp
include/parser/: IParser.hpp  Parser.hpp
include/primitives/: APrimitives.hpp  IPrimitives.hpp
include/renderer/: IRenderer.hpp
scenes/: blueBall.json  colorBall.json  door.json  duck.json  multiBall.json  scene.json  scene2.json  scene3.json
src/: Core.cpp  Main.cpp
src/lights/: ALight.cpp
src/maths/: Point3D.cpp  Ray.cpp  Rectangle3D.cpp  Vector3D.cpp
src/parser/: CheckArgs.cpp  CheckJsonExistence.cpp  Error.cpp  ParseImportedScene.cpp  ParseLight.cpp  ParsePrimitive.cpp  Parser.cpp
src/plugins/: CMakeLists.txt
src/plugins/encoder/: CMakeLists.txt
src/plugins/encoder/ppmEncoder/: CMakeLists.txt  Encoder.cpp  Encoder.hpp  EncoderEntry.cpp
src/plugins/encoder/sfmlEncoder/: CMakeLists.txt  Encoder.cpp  Encoder.hpp  EncoderEntry.cpp
src/plugins/lights/: CMakeLists.txt
src/plugins/lights/ambient/: AmbientEntry.cpp  AmbientLight.cpp  AmbientLight.hpp  CMakeLists.txt
src/plugins/lights/directional/: CMakeLists.txt  DirectionalEntry.cpp  DirectionalLight.cpp  DirectionalLight.hpp
src/plugins/lights/point/: CMakeLists.txt  PointEntry.cpp  PointLight.cpp  PointLight.hpp
src/plugins/primitives/: CMakeLists.txt
src/plugins/primitives/cone/: CMakeLists.txt  Cone.cpp  Cone.hpp  ConeEntry.cpp
src/plugins/primitives/cylinder/: CMakeLists.txt  Cylinder.cpp  Cylinder.hpp  CylinderEntry.cpp
src/plugins/primitives/plan/: CMakeLists.txt  Plan.cpp  Plan.hpp  PlanEntry.cpp
src/plugins/primitives/sphere/: CMakeLists.txt  Sphere.cpp  Sphere.hpp  SphereEntry.cpp
src/plugins/renderer/: CMakeLists.txt
src/plugins/renderer/baseRenderer/: CMakeLists.txt  Renderer.cpp  Renderer.hpp  RendererEntry.cpp
src/plugins/renderer/fastRenderer/: CMakeLists.txt  Renderer.cpp  Renderer.hpp  RendererEntry.cpp
src/plugins/renderer/liveRenderer/: CMakeLists.txt  Renderer.cpp  Renderer.hpp  RendererEntry.cpp
src/utils/: Camera.cpp  Color.cpp  Material.cpp  Primitives.cpp  Scene.cpp
